# miniserde

./: Cargo.toml  README.md
derives/: Cargo.toml
derives/src/: attr.rs  de.rs  lib.rs  ser.rs
src/: __private.rs  aliased_box.rs  careful.rs  error.rs  export.rs  ignore.rs  lib.rs  place.rs
src/cbor/: array.rs  de.rs  drop.rs  map.rs  mod.rs  number.rs  object.rs  ser.rs  tests.rs  value.rs
src/de/: ignored_any.rs  impls.rs  mod.rs
src/json/: de.rs  mod.rs  number.rs  object.rs  ser.rs  value.rs
src/ser/: impls.rs  mod.rs
tests/: cbor_std.rs  ditto_code.rs  test_derive.rs  test_nested.rs  test_number.rs
tests/regression/: issue9.rs
