[package]
name = "miniserde-ditto"
version = "0.2.0-dev"  # Keep in sync with other such occurrences
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "Daniel Henry-Mantilla <daniel@ditto.live>",  # CBOR support
]
license = "MIT OR Apache-2.0"
description = "Data structure serialization library with several opposite design goals from Serde."
repository = "https://github.com/dtolnay/miniserde"
documentation = "https://docs.rs/miniserde"
readme = "README.md"
edition = "2018"

[dependencies]
itoa = { version = "0.4.3", features = ["i128"] }
half = { version = "1.6.0", features = [] }
ryu = "1.0"
with_locals = "0.3.0-rc1"
uninit = "0.4.0"

[dependencies.derives]
package = "miniserde-ditto-derives"
version = "0.2.0-dev"  # Keep in sync with other such occurrences
path = "./derives/"

[dev-dependencies]
automod = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[workspace]
members = ["derives"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
