[package]
name = "miniserde-ditto-derives"
version = "0.2.0-dev"  # Keep in sync with other such occurrences
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "Daniel Henry-Mantilla <daniel@ditto.live>",  # CBOR support
]
license = "MIT OR Apache-2.0"
description = "Derive macros for miniserde. Use the re-exports from the miniserde crate instead."
repository = "https://github.com/dtolnay/miniserde"
documentation = "https://docs.rs/miniserde"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
